[package]
name = "aingle-lmdb"
version = "0.1.0"
authors = ["Apilium Technologies <hello@apilium.com>"]
license = "Apache-2.0"
description = "Idiomatic and safe LMDB wrapper for AIngle"
documentation = "https://docs.rs/aingle-lmdb"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/lmdb-rs"
readme = "README.md"
keywords = ["aingle", "lmdb", "database", "storage-engine"]
categories = ["database"]
edition = "2021"
rust-version = "1.89"

exclude = [
  "/.appveyor.yml",
  "/.travis.yml",
  "/azure-pipelines-template.yml",
  "/azure-pipelines.yml",
]

[lib]
name = "aingle_lmdb"

[workspace]
members = ["lmdb-sys"]

[dependencies]
bitflags = "2.6"
byteorder = "1.5"
libc = "0.2"
aingle-lmdb-sys = { version = "0.1", path = "./lmdb-sys" }

[dev-dependencies]
rand = "0.8"
tempfile = "3.14"

[features]
default = []
with-asan = ["aingle-lmdb-sys/with-asan"]
with-fuzzer = ["aingle-lmdb-sys/with-fuzzer"]
with-fuzzer-no-link = ["aingle-lmdb-sys/with-fuzzer-no-link"]
