[package]
name = "aingle-lmdb-sys"
version = "0.1.0"
authors = ["Apilium Technologies <hello@apilium.com>"]
license = "Apache-2.0"
description = "Rust FFI bindings for LMDB - optimized for AIngle"
documentation = "https://docs.rs/aingle-lmdb-sys"
homepage = "https://apilium.com"
repository = "https://github.com/ApiliumCode/lmdb-rs"
readme = "../README.md"
keywords = ["aingle", "lmdb", "database", "storage-engine", "bindings"]
categories = ["database", "external-ffi-bindings"]
edition = "2021"
rust-version = "1.89"

build = "build.rs"

[lib]
name = "aingle_lmdb_sys"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"
bindgen = { version = "0.71", default-features = false, optional = true, features = ["runtime"] }

[features]
default = []
with-asan = []
with-fuzzer = []
with-fuzzer-no-link = []

# MDB_IDL_LOGN configuration for page list sizes
mdb_idl_logn_8 = []
mdb_idl_logn_9 = []
mdb_idl_logn_10 = []
mdb_idl_logn_11 = []
mdb_idl_logn_12 = []
mdb_idl_logn_13 = []
mdb_idl_logn_14 = []
mdb_idl_logn_15 = []
